# Elekto

./: .gitignore  LICENSE  PLAN.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
electron/: main.ts  preload.ts
src/: App.tsx  index.css
src/audio/: AudioEngine.ts
src/components/: AnalysisProgress.tsx  ChapterManager.tsx  EnergyCurve.tsx  GraphPlaylist.tsx  Onboarding.tsx  ScanProgress.tsx  ScatterMap.tsx  TrackList.tsx  WaveformPlayer.tsx
src/hooks/: useKeyboard.ts  useWorker.ts
src/stores/: chapterStore.ts  trackStore.ts
src/types/: electron.d.ts
worker/: Cargo.toml
worker/src/: audio.rs  db.rs  export.rs  ipc.rs  llm.rs  main.rs  models.rs  nl_search.rs  scanner.rs  sort.rs  waveform.rs
